<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="farijo.com.starcraft_bo_shower.StartActivity">

    <Button
        android:id="@+id/searchBO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="Parcourir les BO" />

    <Button
        android:id="@+id/grabBO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="Grab BO" />

    <Button
        android:id="@+id/loadFromBOBDD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="Récuperer des BO d'une BDD" />

    <Button
        android:id="@+id/createBO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="Créer un BO" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/liste"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
